--- a/po/tr_TR/pcp.po
+++ b/po/tr_TR/pcp.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Kaya Zeren <kayazeren@gmail.com>, 2015
+# Kaya Zeren <kayazeren@gmail.com>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 07:48+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 05:49+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -33,6 +33,10 @@ msgstr "Sayfanızı Düzenleyin"
 msgid "Tell Friends"
 msgstr "Arkadaşlarınıza Söyleyin"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "Bu sayfanın İnternet adresi"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "İletişim Bilgilerini Güncelleyin"
@@ -46,16 +50,16 @@ msgid "Approval required"
 msgstr "Onay gerekli"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Destekçi profili"
+msgid "Owner Email Notification"
+msgstr "Sahip E-posta Bildirimi"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
-msgstr "'Arkadaşına söyle' özelliği kullanılabilsin"
+msgstr "'Arkadaşınıza Bildirin' özelliği kullanılabilsin"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "'Tell a friend' maximum recipients limit"
-msgstr "'Arkadaşına söyle' için en fazla alıcı sınırı"
+msgstr "'Arkadaşınıza Bildirin' için en fazla alıcı sınırı"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Please enter a valid limit."
@@ -67,19 +71,19 @@ msgstr "'Kişisel Kampanya Sayfası Oluşturun' bağlantısı metni"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
 msgstr "Bu etkinlik kaydı <strong>%1</strong> tarafından kampanyamızı desteklemek amacıyla yapılmıştır."
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
 msgstr "Bu katkı <strong>%1</strong> tarafından kampanyamıza verilen desteğe teşekkür etmek amacıyla yapılmıştır."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
-msgstr "Katkım herkese açık onur listesinde görüntülensin"
+msgstr "Katkım herkese açık şeref listesinde görüntülensin"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "List my support anonymously"
@@ -151,6 +155,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "Bu Kişisel Kampanya Sayfası için bir destekçi profili ayarlanmamış ya da devre dışı bırakılmış. Yardıma gerek duyuyorsanız lütfen site yöneticisi ile görüşün."
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr "Bu Kişisel Kampanya Sayfası için Sahip Bildirimi ayarlanmamış. Yardıma gerek duyuyorsanız lütfen site yöneticisi ile görüşün."
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "Kişisel Kampanya Sayfası Kodu"
@@ -185,6 +195,10 @@ msgid "Target Entity Type"
 msgstr "Hedef Varlık Tipi"
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr "Sahip Bildirimi"
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr "Arkadaşına Söyle Sınırı"
 
@@ -199,6 +213,10 @@ msgstr "Bir Kişisel Kampanya Sayfası Oluşturun - 2. Adım"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Kişisel Kampanya Sayfanızı Düzenleyin"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr "Hoş geldiniz"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -230,7 +248,11 @@ msgstr "İlerleme Çubuğu"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Honor Roll"
-msgstr "Onur Listesi"
+msgstr "Şeref Listesi"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "Sayfama yapılan bağışlar bana bildirilsin"
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
@@ -239,20 +261,6 @@ msgstr "Hedef tutar sıfırdan büyük sayısal bir değer olmalıdır."
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "Düğme metninin uzunluğu 64 karakterden kısa olmalıdır."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "Fotoğraf ya da görsel dosyanızın boyutu 360 x 360 pikselden büyük olamaz."
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "Seçtiğiniz görsel boyutları %1 x %2."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Lütfen dosyayı kırpın, küçültün ya da daha küçük bir görsel ile yeniden deneyin."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -298,7 +306,7 @@ msgstr "Kişisel Kampanya Sayfaları Kullanılsın (bu katkı sayfası için)"
 msgid ""
 "if Tell Friend is enabled, Maximum recipients limit should be greater than "
 "zero."
-msgstr "Arkadaşınıza söyleyin özelliği etkinleştirildiğinde, en fazla alıcı sayısı sıfırdan büyük olmalıdır."
+msgstr "Arkadaşınıza Bildirin özelliği etkinleştirildiğinde, en fazla alıcı sayısı sıfırdan büyük olmalıdır."
 
 #: CRM/PCP/Form/Contribute.php CRM/PCP/Form/Event.php
 msgid "Supporter profile is a required field."
@@ -328,7 +336,7 @@ msgstr "Kişisel Kampanya Sayfaları Kullanılsın (bu etkinlik için)"
 msgid ""
 "if Tell Friend is enable, Maximum recipients limit should be greater than "
 "zero."
-msgstr "Arkadaşınıza söyleyin özelliği etkinleştirildiğinde, en fazla alıcı sayısı sıfırdan büyük olmalıdır."
+msgstr "Arkadaşınıza Bildirin özelliği etkinleştirildiğinde, en fazla alıcı sayısı sıfırdan büyük olmalıdır."
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been deleted."
@@ -357,10 +365,6 @@ msgstr "Sayfa Etkinleştirildi"
 #: CRM/PCP/Form/PCP.php
 msgid "Source Type"
 msgstr "Kaynak Tipi"
-
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Etkinlik Sayfası"
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
@@ -436,6 +440,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "Kampanyanızı desteklemek için arkadaşlarınıza e-posta gönderin!"
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "Doğrudan ağınız ile paylaşmak için bu bağlantıyı kopyalayın!"
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Kişisel iletişim bilgilerinizi güncelleyin"
 
@@ -475,9 +483,15 @@ msgstr "Katkı ya da kayıt düğmesinin metni."
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Bu seçenek etkinleştirildiğinde, kampanyanızı destekleyen kişilerin adlarının (ya da takma adlarının) bulunduğu bir \"onur listesi\" görüntülenir (Destekçiler anonim kalmayı seçebilir, bu durumda adları görüntülenmez)."
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr "Bu seçenek etkinleştirildiğinde, sizi destekleyen kişilerin adlarının (ya da takma adlarının) bulunduğu bir \"şeref listesi\" görüntülenir (Destekçiler anonim kalmayı seçebilir, bu durumda adları görüntülenmez)."
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr "Bu seçenek etkinleştirildiğinde, sayfanızdan bir katkı yapıldığında size bir bildirim e-postası gönderilecek."
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -487,10 +501,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "Kişisel Kampanya Sayfaları kullanıldığında, kişilere yaptıkları katkıdan sonra kendi bağış toplama sayfalarını oluşturabilecekleri bir bağlantı görüntülenir.   Bir Kişisel Kampanya Sayfasından yapılan katkılar, bu kampanya sayfasını oluşturan destekçi adına \"sanal kredi\" olarak kaydedilir."
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr "Onay"
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -565,7 +575,7 @@ msgid ""
 "Select the related online contribution page that supporters of this event "
 "are promoting. Visitors to their Personal Campaign pages will be directed to"
 " the selected online contribution page to donate money."
-msgstr "Bu etkinliğin destekçilerinin duyuracağı ilgili çevrimiçi katkı sayfasını seçin. Bu kişilerin Kişisel Kampanya Sayfaları bağışları almak için seçilen çevrimiçi katkı sayfasına yönlendirilir."
+msgstr "Bu etkinliğin destekçilerinin duyuracağı ilgili çevrimiçi katkı sayfasını seçin. Bu kişilerin Kişisel Kampanya Sayfaları bağışları almak için seçilmiş çevrimiçi katkı sayfasına yönlendirilir."
 
 #: templates/CRM/PCP/Form/Event.tpl
 msgid ""
@@ -686,7 +696,7 @@ msgstr "toplandı"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "HONOR ROLL"
-msgstr "ONUR LİSTESİ"
+msgstr "ŞEREF LİSTESİ"
 
 #: templates/CRM/PCP/Page/PCPInfo.tpl
 msgid "Stop"
@@ -726,6 +736,38 @@ msgstr "Sayfaya Bakın"
 msgid "Linked to Contribution Page"
 msgstr "Katkı Sayfasına Bağlantılı"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr "Kişisel sayfanızdan bir bağıl yapıldı"
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr "Topladığınız bağış tutarı güncellendi."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr "Bağışçı bilgileri aşağıda listelenmiştir.  Dilerseniz bağışçılarla iletişim kurarak teşekkürlerinizi iletebilirsiniz."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr "Bağışçı, adının listede görüntülenmesini engellememiş ise şeref listesinde görüntülenecek."
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr "Biri kişisel kampanya sayfanıza bağış yaptı"
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr "Kişisel Kampanya Sayfası Sahip Bildirimi"
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -758,9 +800,9 @@ msgstr "Sayfanıza gidin"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
-msgstr "OTURUM AÇARAK kampanya sayfanıza baktığınızda, sayfa düzenleme, arkadaşlarınıza söyleyin\nve iletişim bilgilerinizi güncelleyin bağlantıları görüntülenir."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
+msgstr "OTURUM AÇARAK kampanya sayfanıza baktığınızda, sayfa düzenleme, Arkadaşınıza Bildirin ve İletişim Bilgilerinizi Güncelleyin bağlantıları görüntülenir."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -778,9 +820,10 @@ msgstr "Sorularınız varsa şuraya e-posta gönderin"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
-msgstr "Kişisel kampanya sayfanız gözden geçirildi. Sayfanızın onaylanmasını engelleyen bazı içerik\nsorunları bulundu. Verdiğimiz rahatsızlıktan dolayı özür dileriz."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
+msgstr "Kişisel kampanya sayfanız gözden geçirildi. Sayfanızın onaylanmasını engelleyen bazı içerik sorunları bulundu. Verdiğimiz rahatsızlıktan dolayı özür dileriz."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -820,7 +863,7 @@ msgstr "Sayfanızı Duyurmak"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid "You can begin your fundraising efforts using our \"Tell a Friend\" form"
-msgstr "\"Arkadaşınıza Söyleyin\" formunu kullanarak bağış toplama çalışmalarınızı başlatabilirsiniz"
+msgstr "\"Arkadaşınıza Bildirin\" formunu kullanarak bağış toplama çalışmalarınızı başlatabilirsiniz"
 
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 msgid "Click this link and follow the prompts"
@@ -875,102 +918,42 @@ msgstr "Bu bağlantıya tıklayın ya da kopyalayıp web tarayıcınızın adres
 msgid "Click or paste this link into your browser"
 msgstr "Bu bağlantıya tıklayın ya da kopyalayıp web tarayıcınızın adres satırına yapıştırın"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "Bu sayfanın İnternet adresi"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
+msgstr "Kişisel Ödeme Sayfası Bloğu"
 
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "Doğrudan ağınız ile paylaşmak için bu bağlantıyı kopyalayın!"
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
+msgstr "Termometre Kullanılsın"
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Bu seçenek etkinleştirildiğinde, sizi destekleyen kişilerin adlarının (ya da takma adlarının) bulunduğu bir \"onur listesi\" görüntülenir (Destekçiler anonim kalmayı seçebilir, bu durumda adları görüntülenmez)."
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
+msgstr "Şeref Listesi Görüntülensin"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
-msgstr "Sahip E-posta Bildirimi"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Bu etkinlik kaydı <strong>%1</strong> tarafından kampanyamızı desteklemek amacıyla yapılmıştır."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Bu katkı <strong>%1</strong> tarafından kampanyamıza verilen desteğe teşekkür etmek amacıyla yapılmıştır."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
-msgstr "Bu Kişisel Kampanya Sayfası için Sahip Bildirimi ayarlanmamış. Yardıma gerek duyuyorsanız lütfen site yöneticisi ile görüşün."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
+msgstr "Sahip Bilgilendirilsin"
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
-msgstr "Sahip Bildirimi"
+msgid "PCP Block ID"
+msgstr "Kişisel Ödeme Sayfası Blok Kodu"
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
-msgstr "Sayfama yapılan bağışlar bana bildirilsin"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
+msgstr "Hedef Varlık"
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
-msgstr "Bu seçenek etkinleştirildiğinde, sayfanızdan bir katkı yapıldığında size bir bildirim e-postası gönderilecek."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
+msgstr "Hedef Varlık Kodu"
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr "Kişisel sayfanızdan bir bağıl yapıldı"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr "Onay Gerekli"
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
-msgstr "Topladığınız bağış tutarı güncellendi."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
+msgstr "Arkadaşınıza Bildirin Kullanılsın"
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr "Bağışçı bilgileri aşağıda listelenmiştir.  Dilerseniz bağışçılarla iletişim kurarak teşekkürlerinizi iletebilirsiniz."
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr "Bağışçı, adının listede görüntülenmesini engellememiş ise onur listesinde görüntülenecek."
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr "Biri kişisel kampanya sayfanıza bağış yaptı"
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr "Kişisel Kampanya Sayfası Sahip Bildirimi"
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr "OTURUM AÇARAK kampanya sayfanıza baktığınızda, sayfa düzenleme, arkadaşlarınıza söyleyin ve iletişim bilgilerinizi güncelleyin bağlantıları görüntülenir."
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
-msgstr "Kişisel kampanya sayfanız gözden geçirildi. Sayfanızın onaylanmasını engelleyen bazı içerik sorunları bulundu. Verdiğimiz rahatsızlıktan dolayı özür dileriz."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
+msgstr "Arkadaşınıza Bildirin Sayısı"
