--- a/po/tr_TR/queue.po
+++ b/po/tr_TR/queue.po
@@ -1,16 +1,16 @@
-# Copyright CiviCRM LLC (c) 2004-2014
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Kaya Zeren <kayazeren@gmail.com>, 2014
+# Kaya Zeren <kayazeren@gmail.com>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2014-08-27 13:25-0400\n"
-"PO-Revision-Date: 2014-09-01 05:10+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-10 05:45+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
-"Language-Team: Turkish (http://www.transifex.com/projects/p/civicrm/language/tr/)\n"
+"Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,3 +36,7 @@ msgstr "Kuyruk ögesi verileri"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Kuyruğu Çalıştıran"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr "Kuyruk Kodu"
