--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:33+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgstr "Kan deelnemersnummer niet vinden"
 
 #: CRM/Event/BAO/Participant.php
 msgid "This event is full."
-msgstr "Het evenement is volgeboekt."
+msgstr "Dit evenement is volgeboekt."
 
 #: CRM/Event/BAO/Participant.php
 msgid "- Participant Fields -"
@@ -367,7 +367,7 @@ msgstr "Deelnemersrol ID"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Register date"
-msgstr "Inschrijvingsdatum"
+msgstr "Inschrijfdatum"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Source"
@@ -629,7 +629,7 @@ msgstr "Kies een locatie"
 
 #: CRM/Event/Form/ManageEvent/Location.php
 msgid "Use Location"
-msgstr "Gebruik locatie"
+msgstr "Locatie gebruiken"
 
 #: CRM/Event/Form/ManageEvent/Location.php
 msgid "Show Location?"
@@ -1266,7 +1266,7 @@ msgstr "De evenementkosten kunnen niet minder zijn dan nul. Selecteer a.u.b. opt
 
 #: CRM/Event/Form/Registration/Register.php
 msgid "Please select a Payment Method"
-msgstr ""
+msgstr "Selecteer een betaalmethode"
 
 #: CRM/Event/Form/Registration/Register.php
 msgid ""
@@ -2857,7 +2857,7 @@ msgstr "Terug naar evenementinformatie van  \"%1\""
 
 #: templates/CRM/Event/Form/Search/Common.tpl
 msgid "Event Dates"
-msgstr "Evenement data"
+msgstr "Evenementdata"
 
 #: templates/CRM/Event/Form/Search/EmptyResults.tpl
 msgid "if you are searching by participant name, check your spelling"
@@ -3443,7 +3443,7 @@ msgstr "Inschrijving (test)"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Registration (Live)"
-msgstr "Inschrijving (productie)"
+msgstr "Inschrijving (live)"
 
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Don't see your event listed? Try \"Search All or by Date Range\" above."
@@ -3563,7 +3563,7 @@ msgstr "Evenement bevestiging"
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 #: xml/templates/message_templates/participant_confirm_text.tpl
 msgid "Download iCalendar File:"
-msgstr "Download iCalendar bestand:"
+msgstr "Download iCalendar-bestand:"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
@@ -3726,7 +3726,7 @@ msgstr ""
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid "Enter valid email address."
-msgstr ""
+msgstr "Voer een geldig e-mailadres in."
 
 #: CRM/Event/Form/SelfSvcTransfer.php
 msgid " is already registered for this event"
@@ -3891,7 +3891,7 @@ msgstr ""
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Thank you for your participation."
-msgstr ""
+msgstr "Bedankt voor uw deelname."
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid ""
