--- a/po/nl_NL/campaign.po
+++ b/po/nl_NL/campaign.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-05-19 03:30+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -373,7 +373,7 @@ msgstr "Er is geen specifieke gegevensgroep voor activiteitstype \"%1\". U kunt 
 
 #: CRM/Campaign/Form/Survey/Questions.php
 msgid "Contact Info"
-msgstr "Contact Info"
+msgstr "Contactinformatie"
 
 #: CRM/Campaign/Form/Survey/Questions.php
 #: CRM/Campaign/Form/Survey/TabHeader.php
@@ -602,7 +602,7 @@ msgstr "Vastleggen dat contacten gestemd hebben"
 
 #: CRM/Campaign/Info.php
 msgid "sign CiviCRM Petition"
-msgstr "ondertekenen petitie"
+msgstr "CiviCRM-petitie ondertekenen"
 
 #: CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reserved."
@@ -786,7 +786,7 @@ msgstr "Velden van de petitie."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Click here for new profile"
-msgstr ""
+msgstr "Klik hier om een profiel aan te maken"
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
@@ -1081,7 +1081,7 @@ msgstr "Voordat we uw handtekening kunnen toevoegen, moet u eerst uw e-mailadres
 msgid ""
 "If you haven't received an email within a few minutes, please check your "
 "spam folder."
-msgstr "Controleer uw spam map als u binnen enkele minuten geen e-mail heeft ontvangen."
+msgstr "Controleer uw spam-map als u binnen enkele minuten geen e-mail heeft ontvangen."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
@@ -1100,7 +1100,7 @@ msgstr "Voordat we uw handtekening kunnen toevoegen, moet u eerst uw e-mailadres
 msgid ""
 "If you haven't received an email from us, check your spam folder, it might "
 "have been wrongly classified."
-msgstr "Controleer uw spam map als u geen e-mail van ons heeft ontvangen. Daar zou het ten onrechte in gekomen kunnen zijn. "
+msgstr "Als u geen e-mail van ons heeft ontvangen, controleer dan uw spam-map. Het bericht kan daarin ten onrechte terecht gekomen zijn."
 
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
