--- a/po/es_MX/admin.po
+++ b/po/es_MX/admin.po
@@ -10,14 +10,15 @@
 # juan barajas <juanito_feliz0123@hotmail.com>, 2016
 # Leonardo Ordonez Checa <leoxordonez@gmail.com>, 2011
 # Joaquin Cardiel <orfeon@hotmail.com>, 2013
+# Pablo May <pablojesusmay@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sluc23 <sluc23@hotmail.com>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-02 23:14+0000\n"
-"Last-Translator: juan barajas <juanito_feliz0123@hotmail.com>\n"
+"PO-Revision-Date: 2016-07-25 22:24+0000\n"
+"Last-Translator: Pablo May <pablojesusmay@gmail.com>\n"
 "Language-Team: Spanish (Mexico) (http://www.transifex.com/civicrm/civicrm/language/es_MX/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -67,7 +68,7 @@ msgstr "Instalar"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "¿Instalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install"
@@ -75,7 +76,7 @@ msgstr "Descargar e installar"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install \"%1\"?"
-msgstr ""
+msgstr "¿Descargar e Instalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Uninstall"
@@ -83,15 +84,15 @@ msgstr "Desinstalar"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall \"%1\"?"
-msgstr ""
+msgstr "¿Desinstalar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Enable \"%1\"?"
-msgstr ""
+msgstr "¿Habilitar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Disable \"%1\"?"
-msgstr ""
+msgstr "¿Deshabilitar \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
@@ -223,7 +224,7 @@ msgstr "El Formato de Etiqueta Seleccionado ha sido borrado."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
-msgstr ""
+msgstr "Copiar %1 de %2"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your new Label Format titled <strong>%1</strong> has been saved."
@@ -251,7 +252,7 @@ msgstr "El tipo de localidad \"%1\" ha sido guardado."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Account"
-msgstr ""
+msgstr "Cuenta de correo electrónico"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email Domain"
@@ -1521,7 +1522,7 @@ msgstr "Su configuración %1 es correcta. Un correo electrónico de prueba ha si
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Sent"
-msgstr ""
+msgstr "Correo Enviado"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Oops. Your %1 settings are incorrect. No test mail has been sent."
@@ -1529,7 +1530,7 @@ msgstr "Ups. Su configuración %1 es incorrecta. Ningún correo de prueba ha sid
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Mail Not Sent"
-msgstr ""
+msgstr "Correo No Enviado"
 
 #: CRM/Admin/Form/Setting/UF.php
 msgid "Settings - %1 Integration"
@@ -1633,7 +1634,7 @@ msgstr "Por favor, introduzca el valor para Palabra Original"
 
 #: CRM/Admin/Form/WordReplacements.php
 msgid "Settings Saved"
-msgstr ""
+msgstr "Configuraciones Guardadas"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "This profile is currently used for %1."
@@ -2232,7 +2233,7 @@ msgstr "Hubo un problema al verificar la disponibilidad de este sitio en el Inte
 
 #: ang/crmCxn/Connectivity.html
 msgid "See also:"
-msgstr ""
+msgstr "Ver también:"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
@@ -2262,7 +2263,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Logs"
-msgstr ""
+msgstr "Registros"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Documentation (External)"
@@ -4988,7 +4989,7 @@ msgstr "Autor"
 #: templates/CRM/Admin/Page/Extensions/AddNew.tpl
 #: templates/CRM/Admin/Page/Extensions/Main.tpl
 msgid "Version"
-msgstr ""
+msgstr "Versión"
 
 #: templates/CRM/Admin/Page/ExtensionDetails.tpl
 msgid "Released on"
@@ -5048,7 +5049,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Extensions/Refresh.tpl
 msgid "Refresh"
-msgstr ""
+msgstr "Refrescar"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid ""
@@ -6301,7 +6302,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ScheduleReminders.tpl
 msgid "Add Reminder"
-msgstr ""
+msgstr "Añadir Recordatorio"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid ""
@@ -6528,11 +6529,11 @@ msgstr ""
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Unhide"
-msgstr ""
+msgstr "Mostrar"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Hide"
-msgstr ""
+msgstr "Ocultar"
 
 #: ang/crmStatusPage/SnoozeOptions.html
 msgid "Remind me again in a week"
@@ -6613,7 +6614,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Setting/Date.tpl
 msgid "Calendar"
-msgstr ""
+msgstr "Calendario"
 
 #: templates/CRM/Admin/Form/Setting/Localization.hlp
 msgid "Special symbols include:"
