--- a/po/es_PR/financial.po
+++ b/po/es_PR/financial.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# juan pagan <juanspagan@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-26 16:09+0000\n"
+"Last-Translator: juan pagan <juanspagan@gmail.com>\n"
 "Language-Team: Spanish (Puerto Rico) (http://www.transifex.com/civicrm/civicrm/language/es_PR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,27 +19,27 @@ msgstr ""
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Record:"
-msgstr ""
+msgstr "Registro:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created By:"
-msgstr ""
+msgstr "Creado por:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Created Date:"
-msgstr ""
+msgstr "Fecha de Creación:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Last Modified By:"
-msgstr ""
+msgstr "Última modificación realizada por:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr ""
+msgstr "Instrumento de pago:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
-msgstr ""
+msgstr "Lote"
 
 #: CRM/Financial/BAO/FinancialAccount.php
 msgid ""
@@ -977,19 +978,19 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item ID"
-msgstr ""
+msgstr "Identificación del Elemento Financiero"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Created Date"
-msgstr ""
+msgstr "Fecha de Creación del Elemento Financiero"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Transaction Date"
-msgstr ""
+msgstr "Fecha de Transacción del Elemento Financiero"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Contact ID"
-msgstr ""
+msgstr "Identificación de Contacto del Elemento Financiero"
 
 #: CRM/Financial/DAO/FinancialItem.php
 msgid "Financial Item Description"
@@ -1043,7 +1044,7 @@ msgstr ""
 msgid ""
 "If you specify a payment method then this batch will be limited to exporting"
 " only transactions paid with that method."
-msgstr ""
+msgstr "Si usted especifica un método de pago, entonces este lote será limitado para exportar sólo transacciones pagadas por ese método."
 
 #: templates/CRM/Financial/Page/FinancialBatch.hlp
 msgid ""
