--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 16:14+0000\n"
+"PO-Revision-Date: 2016-07-26 14:17+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -3531,7 +3531,7 @@ msgstr ""
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Add Relationship for %1"
-msgstr ""
+msgstr "Afegir una relació a %1"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Edit Relationship for %1"
@@ -8423,7 +8423,7 @@ msgstr "Elimina %1"
 
 #: CRM/Core/Form.php
 msgid "Choose country first"
-msgstr ""
+msgstr "Trieu primer el país"
 
 #: CRM/Core/Form.php
 msgid "Choose state first"
@@ -15126,7 +15126,7 @@ msgstr "Empleat actual?"
 
 #: templates/CRM/Contact/Form/Relationship.tpl
 msgid "Permissions"
-msgstr ""
+msgstr "Permisos"
 
 #: templates/CRM/Contact/Form/Relationship.tpl
 msgid "<strong>%1</strong> can view and update information about %2."
@@ -15142,7 +15142,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Relationship.tpl
 msgid "- first select relationship type -"
-msgstr ""
+msgstr "- primer seleccioneu un tipus de relació -"
 
 #: templates/CRM/Contact/Form/Relationship.tpl
 msgid "Are you sure you want to delete this Relationship?"
