--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-25 15:41+0000\n"
+"PO-Revision-Date: 2016-07-27 12:05+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -3645,7 +3645,7 @@ msgstr ""
 
 #: CRM/Event/Cart/DAO/Cart.php
 msgid "Complete?"
-msgstr ""
+msgstr "Completat?"
 
 #: CRM/Event/Cart/DAO/EventInCart.php
 msgid "Event In Cart"
